{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 56,
  "lineage": "cb4db7e7-e87f-712b-cf3c-bcc4431edc52",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic-gitlab",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/bd59662e-a78e-4d7c-84f6-9d9ad1883726/resourceGroups/obmondo-aks/providers/Microsoft.Network/networkInterfaces/nic-kilroy-gitlabxi",
            "internal_domain_name_suffix": "qlktzvydz3fufeutmak1lbxokc.fx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig0",
                "primary": true,
                "private_ip_address": "10.240.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/bd59662e-a78e-4d7c-84f6-9d9ad1883726/resourceGroups/obmondo-aks/providers/Microsoft.Network/publicIPAddresses/pip-kilroy-gitlabxi",
                "subnet_id": "/subscriptions/bd59662e-a78e-4d7c-84f6-9d9ad1883726/resourceGroups/obmondo-aks/providers/Microsoft.Network/virtualNetworks/obmondo-vnet/subnets/obmondo-subnet"
              }
            ],
            "location": "northeurope",
            "mac_address": "00-0D-3A-DB-5C-52",
            "name": "nic-kilroy-gitlabxi",
            "private_ip_address": "10.240.0.4",
            "private_ip_addresses": [
              "10.240.0.4"
            ],
            "resource_group_name": "obmondo-aks",
            "virtual_machine_id": "/subscriptions/bd59662e-a78e-4d7c-84f6-9d9ad1883726/resourceGroups/obmondo-aks/providers/Microsoft.Compute/virtualMachines/kilroy-gitlabxi"
          },
          "dependencies": [
            "azurerm_public_ip.pip-gitlab",
            "azurerm_subnet.obmondo-subnet",
            "random_string.guid"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bd59662e-a78e-4d7c-84f6-9d9ad1883726/resourceGroups/obmondo-aks/providers/Microsoft.Network/networkInterfaces/nic-kilroy-gitlabxi|/subscriptions/bd59662e-a78e-4d7c-84f6-9d9ad1883726/resourceGroups/obmondo-aks/providers/Microsoft.Network/networkSecurityGroups/myNetworkSecurityGroup",
            "network_interface_id": "/subscriptions/bd59662e-a78e-4d7c-84f6-9d9ad1883726/resourceGroups/obmondo-aks/providers/Microsoft.Network/networkInterfaces/nic-kilroy-gitlabxi",
            "network_security_group_id": "/subscriptions/bd59662e-a78e-4d7c-84f6-9d9ad1883726/resourceGroups/obmondo-aks/providers/Microsoft.Network/networkSecurityGroups/myNetworkSecurityGroup"
          },
          "dependencies": [
            "azurerm_network_interface.nic-gitlab",
            "azurerm_network_security_group.myterraformnsg",
            "azurerm_public_ip.pip-gitlab",
            "azurerm_subnet.obmondo-subnet",
            "random_string.guid"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "myterraformnsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bd59662e-a78e-4d7c-84f6-9d9ad1883726/resourceGroups/obmondo-aks/providers/Microsoft.Network/networkSecurityGroups/myNetworkSecurityGroup",
            "location": "northeurope",
            "name": "myNetworkSecurityGroup",
            "resource_group_name": "obmondo-aks",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ssh",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "109.238.49.194",
                  "109.238.49.196",
                  "95.216.10.96"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "https",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "109.238.49.194",
                  "109.238.49.196",
                  "95.216.10.96"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "myrules",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "https",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/bd59662e-a78e-4d7c-84f6-9d9ad1883726/resourceGroups/obmondo-aks/providers/Microsoft.Network/networkSecurityGroups/myNetworkSecurityGroup/securityRules/https",
            "name": "https",
            "network_security_group_name": "myNetworkSecurityGroup",
            "priority": 101,
            "protocol": "Tcp",
            "resource_group_name": "obmondo-aks",
            "source_address_prefix": "",
            "source_address_prefixes": [
              "109.238.49.194",
              "109.238.49.196",
              "95.216.10.96"
            ],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.myterraformnsg"
          ]
        },
        {
          "index_key": "ssh",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/bd59662e-a78e-4d7c-84f6-9d9ad1883726/resourceGroups/obmondo-aks/providers/Microsoft.Network/networkSecurityGroups/myNetworkSecurityGroup/securityRules/ssh",
            "name": "ssh",
            "network_security_group_name": "myNetworkSecurityGroup",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "obmondo-aks",
            "source_address_prefix": "",
            "source_address_prefixes": [
              "109.238.49.194",
              "109.238.49.196",
              "95.216.10.96"
            ],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.myterraformnsg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip-gitlab",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "domain_name_label": "kilroy-gitlabxi",
            "fqdn": "kilroy-gitlabxi.northeurope.cloudapp.azure.com",
            "id": "/subscriptions/bd59662e-a78e-4d7c-84f6-9d9ad1883726/resourceGroups/obmondo-aks/providers/Microsoft.Network/publicIPAddresses/pip-kilroy-gitlabxi",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.234.22.119",
            "ip_version": "IPv4",
            "location": "northeurope",
            "name": "pip-kilroy-gitlabxi",
            "resource_group_name": "obmondo-aks",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "random_string.guid"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "obmondo-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.240.0.0/16"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/bd59662e-a78e-4d7c-84f6-9d9ad1883726/resourceGroups/obmondo-aks/providers/Microsoft.Network/virtualNetworks/obmondo-vnet/subnets/obmondo-subnet",
            "name": "obmondo-subnet",
            "resource_group_name": "obmondo-aks",
            "virtual_network_name": "obmondo-vnet"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "obmondo-vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.240.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "d73cd582-cf03-424b-9293-6015b586ee52",
            "id": "/subscriptions/bd59662e-a78e-4d7c-84f6-9d9ad1883726/resourceGroups/obmondo-aks/providers/Microsoft.Network/virtualNetworks/obmondo-vnet",
            "location": "northeurope",
            "name": "obmondo-vnet",
            "resource_group_name": "obmondo-aks",
            "subnet": [
              {
                "address_prefix": "10.240.0.0/16",
                "id": "/subscriptions/bd59662e-a78e-4d7c-84f6-9d9ad1883726/resourceGroups/obmondo-aks/providers/Microsoft.Network/virtualNetworks/obmondo-vnet/subnets/obmondo-subnet",
                "name": "obmondo-subnet"
              }
            ]
          }
        }
      ]
    }
  ]
}